<resources>
    <string name="app_name">Allan DUEE</string>
    <string name="on_create">onCreate</string>
    <string name="on_start">onStart</string>
    <string name="on_pause">onPause</string>
    <string name="on_resume">onResume</string>
    <string name="on_stop">onStop</string>
    <string name="on_destroy">onDestroy</string>
    <string name="tag">TAG</string>
    <string name="incorrect_password">Mot de passe incorrect</string>
    <string name="incorrect_pseudo">identifiant incorrect</string>
    <string name="no_contact_available">Pas de contact Disponible</string>
    <string name="permission_denied">Permission refusé</string>
    <string name="user_saved">"L'utilisateur a été sauvegardé via un chiffrement RSA"</string>
    <string name="user_decrypt">"Déchiffrement des informations de L'utilisateur"</string>
    <string name="json_info_title">Information du Json : </string>
    <string name="json_cancel_dialog">Vous avez fermé la boite de dialogue</string>
    <string name="json_cancel_button">Fermer</string>
    <string name="error_api">Erreur à la lecture de l API</string>
    <string name="error_json_save">Vous devez remplir tout les champs avant de pouvoir sauvegarder votre fichier.</string>
    <string name="error_json_read">Aucun fichier crée !!!!\nVeuillez remplir le formulaire et sauvegarder avant de pouvoir lire le fichier.</string>

    <string name="login_activity_title">Connexion</string>
    <string name="login_activity_label_email">Identifiant</string>
    <string name="login_activity_label_password">Mot de Passe</string>
    <string name="login_activity_button_validForm">Valider</string>
    <string name="home_activity_title">Bonjour</string>
    <string name="home_activity_button_top_left_name">Cycle de Vie</string>
    <string name="home_activity_button_top_right_name">Sauvegarde</string>
    <string name="home_activity_button_bottom_left_name">Permissions</string>
    <string name="home_activity_button_bottom_right_name">Webservices</string>
    <string name="lifecycle_activity_button">Changer de Fragement</string>
    <string name="save_data_activity_title">Page de Sauvegarde des Données</string>
    <string name="save_data_activity_lastname">Nom</string>
    <string name="save_data_activity_firstname">Prénom</string>
    <string name="save_data_activity_date_button">Date Picker</string>
    <string name="save_data_activity_read_json">Lecture</string>
    <string name="save_data_activity_date_naissance">Date de Naissance : </string>
    <string name="save_data_activity_button_save">Sauvegarder</string>
    <string name="phone_information_activity_title">Accès aux informations Android</string>
    <string name="phone_information_activity_lat_title">Latitude : </string>
    <string name="phone_information_activity_long_title">Longitude : </string>
    <string name="phone_information_activity_popup_title">Veuillez séléctionner un mode :</string>
    <string name="phone_information_activity_popup_gallery">Vous avez choisis la Gallery</string>
    <string name="phone_information_activity_popup_camera">Vous avez choisis la Camera</string>
    <string name="phone_information_activity_popup_cancel">Vous avez fermé la Popup</string>
    <string name="phone_information_long_lat_permission">Latitude : %1$f\n\nLongitude : %2$f</string>
    <string name="contact_phone_number_title">Numéro de Téléphone : </string>
    <string name="contact_email_title">Adresse Email : </string>
    <string name="contact_birthday_title">Date de Naissance : </string>
    <string name="fragment_specific_contact_title">Page Utilisateur Spécifique</string>
    <string name="fragment_specific_contact_name_title">Nom : </string>
    <string name="fragment_specific_contact_email_title">Adresse Email : </string>
    <string name="fragment_specific_contact_number_title">Numéro de Téléphone : </string>
    <string name="fragment_specific_contact_birthday_title">Date de Naissance : </string>
    <string name="fragment_specific_contact_button_go_back">Retour</string>
    <string name="activity_lifecycle_title">Activity LifeCycle</string>
    <string name="activity_save_data_empty_date_picker">--/--/----</string>
    <string name="fragment_lifecycle_page_title">Fragment LifeCycle</string>
    <string name="fragment_lifecycle_fragment_one_title">Fragment 1</string>
    <string name="contact_title">Name</string>
    <string name="second_fragment_lifecycle_title">Second Fragment LifeCycle</string>
    <string name="fragment_life_cycle_second_fragment_two_title">Fragment 2</string>
    <string name="cybersecyrity_class_logo">Cybersecyrity class logo</string>
    <string name="life_cycle_icon">Life Cycle Icon</string>
    <string name="save_data_icon">Save Data Icon</string>
    <string name="permissions_icon">Permissions Icon</string>
    <string name="webservices_icon">Webservices Icon</string>
    <string name="logout_icon">Logout Icon</string>
    <string name="camera_or_gallery_picture">Camera or Gallery picture</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="user_icon">User Icon</string>

</resources>
