<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
    android:id="@+id/loginPicture"
    android:layout_width="317dp"
    android:layout_height="128dp"
    android:layout_marginTop="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/loginTitle"
    app:srcCompat="@drawable/isenlogo"/>

    <Button
    android:id="@+id/loginValidateButton"
    android:layout_width="134dp"
    android:layout_height="57dp"
    android:layout_marginTop="64dp"
    android:background="@color/colorRedLight"
    android:text="@string/login_activity_button_validForm"
    android:textColor="@color/colorWhite"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="@+id/loginPasswordInput"
    app:layout_constraintStart_toStartOf="@+id/loginPasswordInput"
    app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" />

    <TextView
    android:id="@+id/loginTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/login_activity_title"
    android:textColor="@color/colorBlack"
    android:textSize="30sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEmailInput"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="@+id/loginPicture"
        app:layout_constraintTop_toBottomOf="@+id/loginPicture">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginEmailInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_activity_label_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordInput"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/loginEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailInput"
        app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_activity_label_password" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

