<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <TextView
        android:id="@+id/specificUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_specific_contact_title"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/specificUserGoBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_specific_contact_button_go_back"
        android:background="@color/colorRedLight"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specificUserDateOfBirthTitle" />

    <TextView
        android:id="@+id/specificUserFirstnameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_specific_contact_firstname_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specificUserTitle" />

    <TextView
        android:id="@+id/specificUserLastnameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_specific_contact_lastname_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/specificUserFirstnameTitle"
        app:layout_constraintTop_toBottomOf="@+id/specificUserFirstnameTitle" />

    <TextView
        android:id="@+id/specificUserEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_specific_contact_email_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/specificUserLastnameTitle"
        app:layout_constraintTop_toBottomOf="@+id/specificUserLastnameTitle" />

    <TextView
        android:id="@+id/specificUserPhoneNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_specific_contact_number_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/specificUserEmailTitle"
        app:layout_constraintTop_toBottomOf="@+id/specificUserEmailTitle" />

    <TextView
        android:id="@+id/specificUserDateOfBirthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_specific_contact_birthday_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/specificUserPhoneNumberTitle"
        app:layout_constraintTop_toBottomOf="@+id/specificUserPhoneNumberTitle" />

    <TextView
        android:id="@+id/specificUserFirstnameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/specificUserFirstnameTitle"
        app:layout_constraintTop_toTopOf="@+id/specificUserFirstnameTitle" />

    <TextView
        android:id="@+id/specificUserLastnameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/specificUserFirstnameValue"
        app:layout_constraintTop_toTopOf="@+id/specificUserLastnameTitle" />

    <TextView
        android:id="@+id/specificUserEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/specificUserLastnameValue"
        app:layout_constraintTop_toTopOf="@+id/specificUserEmailTitle" />

    <TextView
        android:id="@+id/specificUserPhoneNumberValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/specificUserEmailValue"
        app:layout_constraintTop_toTopOf="@+id/specificUserPhoneNumberTitle" />

    <TextView
        android:id="@+id/specificUserDateOfBirthValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/specificUserPhoneNumberValue"
        app:layout_constraintTop_toTopOf="@+id/specificUserDateOfBirthTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>