<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <TextView
        android:id="@+id/fragment_specific_user_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_specific_contact_title"
        android:textColor="@color/colorBlack"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragment_specific_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_specific_contact_button_go_back"
        android:background="@color/colorRedLight"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_specific_user_birthday_title" />

    <TextView
        android:id="@+id/fragment_specific_user_firstname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/fragment_specific_contact_firstname_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_specific_user_title" />

    <TextView
        android:id="@+id/fragment_specific_user_lastname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_specific_contact_lastname_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/fragment_specific_user_firstname_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_specific_user_firstname_title" />

    <TextView
        android:id="@+id/fragment_specific_user_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_specific_contact_email_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/fragment_specific_user_lastname_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_specific_user_lastname_title" />

    <TextView
        android:id="@+id/fragment_specific_user_phone_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_specific_contact_number_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/fragment_specific_user_email_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_specific_user_email_title" />

    <TextView
        android:id="@+id/fragment_specific_user_birthday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fragment_specific_contact_birthday_title"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/fragment_specific_user_phone_number_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_specific_user_phone_number_title" />

    <TextView
        android:id="@+id/fragment_specific_user_firstname_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/fragment_specific_user_firstname_title"
        app:layout_constraintTop_toTopOf="@+id/fragment_specific_user_firstname_title" />

    <TextView
        android:id="@+id/fragment_specific_user_lastname_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/fragment_specific_user_firstname_value"
        app:layout_constraintTop_toTopOf="@+id/fragment_specific_user_lastname_title" />

    <TextView
        android:id="@+id/fragment_specific_user_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/fragment_specific_user_lastname_value"
        app:layout_constraintTop_toTopOf="@+id/fragment_specific_user_email_title" />

    <TextView
        android:id="@+id/fragment_specific_user_phone_number_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/fragment_specific_user_email_value"
        app:layout_constraintTop_toTopOf="@+id/fragment_specific_user_phone_number_title" />

    <TextView
        android:id="@+id/fragment_specific_user_birthday_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="textView"
        android:textColor="@color/colorBlack"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/fragment_specific_user_phone_number_value"
        app:layout_constraintTop_toTopOf="@+id/fragment_specific_user_birthday_title" />

</androidx.constraintlayout.widget.ConstraintLayout>